--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -13,7 +13,8 @@ env:
   HOME_PATH: ${{ github.workspace }}
   # Use docker.io for Docker Hub if empty
   REGISTRY: ghcr.io
-  IMAGE_NAME: hello-world
+  HELLO_WORLD_IMAGE_NAME: hello-world
+  HELLO_WEB_IMAGE_NAME: hello-web
 
 jobs:
   build:
@@ -35,15 +36,28 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Extract metadata (tags, labels) for Docker
-        id: meta
+        id: meta-hello-world
         uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
         with:
-          images: ${{ env.REGISTRY }}/${{ github.actor }}/${{ env.IMAGE_NAME }}
+          images: ${{ env.REGISTRY }}/${{ github.actor }}/${{ env.HELLO_WORLD_IMAGE_NAME }}
 
-      - name: Build and push Docker image
+      - name: Build and push Docker image for hello-world
         uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
         with:
           context: ./hello-world
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: ${{ steps.meta-hello-world.outputs.tags }}
 #          labels: ${{ steps.meta.outputs.labels }}
+
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta-hello-web
+        uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
+        with:
+          images: ${{ env.REGISTRY }}/${{ github.actor }}/${{ env.HELLO_WEB_IMAGE_NAME }}
+
+      - name: Build and push Docker image for hello-web
+        uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
+        with:
+          context: ./hello-web
+          push: true
+          tags: ${{ steps.meta-hello-web.outputs.tags }}
