--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -15,6 +15,7 @@ env:
   REGISTRY: ghcr.io
   HELLO_WORLD_IMAGE_NAME: hello-world
   HELLO_WEB_IMAGE_NAME: hello-web
+  REST_API_IMAGE_NAME: rest-api
 
 jobs:
   build:
@@ -61,3 +62,16 @@ jobs:
           context: ./hello-web
           push: true
           tags: ${{ steps.meta-hello-web.outputs.tags }}
+
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta-rest-api
+        uses: docker/metadata-action@9ec57ed1fcdbf14dcef7dfbe97b2010124a938b7
+        with:
+          images: ${{ env.REGISTRY }}/${{ github.actor }}/${{ env.REST_API_IMAGE_NAME }}
+
+      - name: Build and push Docker image for rest-api
+        uses: docker/build-push-action@f2a1d5e99d037542a71f64918e516c093c6f3fc4
+        with:
+          context: ./rest-api
+          push: true
+          tags: ${{ steps.meta-rest-api.outputs.tags }}
