--- a/rest-api/Dockerfile
+++ b/rest-api/Dockerfile
@@ -3,21 +3,18 @@
 #	build the application
 FROM golang:1.17-alpine AS build
 
-WORKDIR /personaLib
+WORKDIR /rest-api
 
-COPY main.go app.go go.mod go.sum ./
-COPY controller/author.go controller/book.go controller/controller.go controller/go.mod controller/publisher.go ./controller/
-COPY model/author.go model/book.go model/id.go model/go.mod model/publisher.go ./model/
-COPY store/author.go store/book.go store/collection.go store/go.mod store/publisher.go ./store/
+COPY main.go go.mod go.sum ./
 
-RUN CGO_ENABLED=0 go build -o ./bin/server app.go main.go
+RUN CGO_ENABLED=0 go build -o ./bin/server main.go
 
 #	create application image
 FROM alpine:latest
 
-WORKDIR /personaLib
+WORKDIR /rest-api
 
-COPY --from=build /personaLib/bin/server ./bin/
+COPY --from=build /rest-api/bin/server ./bin/
 
 EXPOSE 8080
-ENTRYPOINT ["/personaLib/bin/server"]
+ENTRYPOINT ["/rest-api/bin/server"]
